--- a/rsurl_dotNET/rsurl_frontend/Shared/MainLayout.razor.css
+++ b/rsurl_dotNET/rsurl_frontend/Shared/MainLayout.razor.css
@@ -1,4 +1,4 @@
-.page {
+/* .page {
     position: relative;
     display: flex;
     flex-direction: column;
@@ -67,4 +67,17 @@ main {
         padding-left: 2rem !important;
         padding-right: 1.5rem !important;
     }
+}
+*/
+
+#components-layout-demo-fixed .logo {
+    width: 120px;
+    height: 31px;
+    background: rgba(5, 5, 5, 0.2);
+    margin: 16px 24px 16px 0;
+    float: left;
+}
+
+.site-layout .site-layout-background {
+    background: #000;
 }
