--- a/rsurl_dotNET/rsurl_frontend/_Imports.razor
+++ b/rsurl_dotNET/rsurl_frontend/_Imports.razor
@@ -8,3 +8,7 @@
 @using Microsoft.JSInterop
 @using rsurl_frontend
 @using rsurl_frontend.Shared
+
+@using AntDesign
+@using AntDesign.ProLayout
+@using AntDesign.Pro.Template
