ShortURL Front end

--- a/rsurl_dotNET/rsurl_mublazor_frontend/Shared/MainLayout.razor
+++ b/rsurl_dotNET/rsurl_mublazor_frontend/Shared/MainLayout.razor
@@ -1,20 +1,93 @@
 ﻿@inherits LayoutComponentBase
 
-<PageTitle>rsurl_mublazor_frontend</PageTitle>
+@inject IDialogService DialogService
 
-<div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
 
-    <main>
-        <div class="top-row px-4 auth">
-            <LoginDisplay />
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
-        </div>
+<PageTitle>Home - RSURL</PageTitle>
 
-        <article class="content px-4">
+<MudThemeProvider Theme="currentTheme"/>
+<MudDialogProvider />
+<MudSnackbarProvider />
+
+<MudLayout>
+    <MudAppBar>
+        <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" />
+        PESUEats
+        <MudSpacer/>
+        <MudButton OnClick="@((e) => DarkMode())" style="margin-left: 1pt"
+            StartIcon="@Icons.Material.Filled.LightMode" EndIcon="@Icons.Material.Filled.DarkMode"></MudButton>
+        <LoginDisplay />
+    </MudAppBar>
+    <MudDrawer @bind-Open="@_drawerOpen">
+        <NavMenu/>
+    </MudDrawer>
+    <MudMainContent>
+        <MudContainer MaxWidth="MaxWidth.Medium">
             @Body
-        </article>
-    </main>
-</div>
+        </MudContainer>
+    </MudMainContent>
+</MudLayout>
+
+
+@code {
+    bool _drawerOpen = true;
+
+    void DrawerToggle()
+    {
+        _drawerOpen = !_drawerOpen;
+    }
+
+    protected override void OnInitialized()
+    {
+        currentTheme = darkTheme;
+    }
+
+    void DarkMode()
+    {
+        if (currentTheme == defaultTheme)
+        {
+            currentTheme = darkTheme;
+        }
+        else
+        {
+            currentTheme = defaultTheme;
+        }
+    }
+
+    MudTheme currentTheme = new MudTheme();
+
+    MudTheme defaultTheme = new MudTheme()
+    {
+        Palette = new Palette()
+        {
+            Black = "#272c34"
+        }
+    };
+
+    MudTheme darkTheme = new MudTheme()
+    {
+        Palette = new Palette()
+        {
+            Black = "#00101d",
+            Background = "#051e38",
+            BackgroundGrey = "#00101d",
+            Surface = "#373740",
+            DrawerBackground = "#00101d",
+            DrawerText = "rgba(255,255,255, 0.70)",
+            DrawerIcon = "rgba(255,255,255, 0.50)",
+            AppbarBackground = "#00101d",
+            AppbarText = "rgba(255,255,255, 0.70)",
+            TextPrimary = "rgba(255,255,255, 0.90)",
+            TextSecondary = "rgba(255,255,255, 0.60)",
+            ActionDefault = "#adadb1",
+            ActionDisabled = "rgba(255,255,255, 0.26)",
+            ActionDisabledBackground = "rgba(255,255,255, 0.12)",
+            Divider = "rgba(255,255,255, 0.12)",
+            DividerLight = "rgba(255,255,255, 0.06)",
+            TableLines = "rgba(255,255,255, 0.12)",
+            LinesDefault = "rgba(255,255,255, 0.12)",
+            LinesInputs = "rgba(255,255,255, 0.3)",
+            TextDisabled = "rgba(255,255,255, 0.2)",
+        }
+    };
+}
