--- a/rsurl_dotNET/rsurl_mublazor_frontend/App.razor
+++ b/rsurl_dotNET/rsurl_mublazor_frontend/App.razor
@@ -1,13 +1,21 @@
 ﻿<CascadingAuthenticationState>
     <Router AppAssembly="@typeof(App).Assembly">
         <Found Context="routeData">
-            <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
+            <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)">
+                <NotAuthorized>
+                    <MudAlert Severity="Severity.Error" Variant="Variant.Filled">
+                        You are not authorized to view this page. Login with an account that has the right permissions.
+                    </MudAlert>
+                </NotAuthorized>
+            </AuthorizeRouteView>
             <FocusOnNavigate RouteData="@routeData" Selector="h1" />
         </Found>
         <NotFound>
             <PageTitle>Not found</PageTitle>
             <LayoutView Layout="@typeof(MainLayout)">
-                <p role="alert">Sorry, there's nothing at this address.</p>
+                <MudAlert Severity="Severity.Warning" Variant="Variant.Filled">
+                    404 Error: Sorry, there's nothing at this address
+                </MudAlert>
             </LayoutView>
         </NotFound>
     </Router>
