--- a/rsurl_dotNET/rsurl_mublazor_frontend/Pages/Index.razor
+++ b/rsurl_dotNET/rsurl_mublazor_frontend/Pages/Index.razor
@@ -1,9 +1,9 @@
 ﻿@page "/"
 
-<PageTitle>Index</PageTitle>
+<PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Hello, There!</h1>
 
-Welcome to your new app.
+You can generate Short URLs using rsurl!
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+We recommend signing in!
