--- a/rsurl_dotNET/rsurl_mublazor_frontend/Shared/NavMenu.razor
+++ b/rsurl_dotNET/rsurl_mublazor_frontend/Shared/NavMenu.razor
@@ -1,39 +1,23 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="">rsurl_mublazor_frontend</a>
-        <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-    </div>
-</div>
-
-<div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
-    <nav class="flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-            </NavLink>
-        </div>
-    </nav>
-</div>
-
-@code {
-    private bool collapseNavMenu = true;
-
-    private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
-
-    private void ToggleNavMenu()
-    {
-        collapseNavMenu = !collapseNavMenu;
-    }
-}
+﻿<MudNavMenu>
+    <MudNavLink Href="" Match="NavLinkMatch.All">Home</MudNavLink>
+    <MudNavGroup Title="RSURL App" Expanded="true">
+        <MudNavLink Href="/gensurl">Generate Short URL</MudNavLink>
+    </MudNavGroup>
+    <AuthorizeView>
+        <Authorized>
+            <MudNavLink Href="/myurls">My URLs</MudNavLink>
+        </Authorized>
+    </AuthorizeView>
+    <MudNavGroup Title="Analytics" Expanded="false">
+        <AuthorizeView>
+            <Authorized>
+                <MudNavLink Href="">Browser</MudNavLink>
+                <MudNavLink Href="">Location</MudNavLink>
+            </Authorized>
+            <NotAuthorized>
+                <p>You need to Log in for analytics</p>
+            </NotAuthorized>
+        </AuthorizeView>
+    </MudNavGroup>
+    <MudNavLink Href="/test">💀 Test</MudNavLink>
+</MudNavMenu>
