--- a/rsurl_dotNET/rsurl_mublazor_frontend/wwwroot/css/site.css
+++ b/rsurl_dotNET/rsurl_mublazor_frontend/wwwroot/css/site.css
@@ -1,4 +1,5 @@
-@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
+/*
+    @import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
 
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -62,3 +63,5 @@ a, .btn-link {
     .blazor-error-boundary::after {
         content: "An error has occurred."
     }
+
+*/
